tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__931004_5.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/931004-5.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg0: s32i, %arg1: u32i, %arg2: u32i, %arg3: u32i, %arg4: s64i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: u32i, %arg2: u32i, %arg3: u32i, %arg4: s64i):
        %50 = alloca u32i, "coerce", align 4
        store %arg3, %50
        %51 = cast(bitcast) %50 : rec_tiny*
        %52 = load %51 : rec_tiny
        %53 = alloca u32i, "coerce", align 4
        store %arg2, %53
        %54 = cast(bitcast) %53 : rec_tiny*
        %55 = load %54 : rec_tiny
        %56 = alloca u32i, "coerce", align 4
        store %arg1, %56
        %57 = cast(bitcast) %56 : rec_tiny*
        %58 = load %57 : rec_tiny
        %59 = alloca s32i, "n", align 4
        %60 = alloca rec_tiny, "x", align 2
        %61 = alloca rec_tiny, "y", align 2
        %62 = alloca rec_tiny, "z", align 2
        %63 = alloca s64i, "l", align 8
        store %arg0, %59
        store %58, %60
        store %55, %61
        store %52, %62
        store %arg4, %63
        scope {
            %98 = get_member %60[0] "c" : s16i*
            %99 = load %98 : s16i, align 2
            %100 = cast(integral) %99 : s32i
            %101 = const 10 : s32i
            %102 = cmp ne %100, %101 : bool
            if %102 {
                %103 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %92 = get_member %60[1] "d" : s16i*
            %93 = load %92 : s16i, align 2
            %94 = cast(integral) %93 : s32i
            %95 = const 20 : s32i
            %96 = cmp ne %94, %95 : bool
            if %96 {
                %97 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %86 = get_member %61[0] "c" : s16i*
            %87 = load %86 : s16i, align 2
            %88 = cast(integral) %87 : s32i
            %89 = const 11 : s32i
            %90 = cmp ne %88, %89 : bool
            if %90 {
                %91 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %80 = get_member %61[1] "d" : s16i*
            %81 = load %80 : s16i, align 2
            %82 = cast(integral) %81 : s32i
            %83 = const 21 : s32i
            %84 = cmp ne %82, %83 : bool
            if %84 {
                %85 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %74 = get_member %62[0] "c" : s16i*
            %75 = load %74 : s16i, align 2
            %76 = cast(integral) %75 : s32i
            %77 = const 12 : s32i
            %78 = cmp ne %76, %77 : bool
            if %78 {
                %79 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %68 = get_member %62[1] "d" : s16i*
            %69 = load %68 : s16i, align 2
            %70 = cast(integral) %69 : s32i
            %71 = const 22 : s32i
            %72 = cmp ne %70, %71 : bool
            if %72 {
                %73 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %64 = load %63 : s64i, align 8
            %65 = const 123 : s64i
            %66 = cmp ne %64, %65 : bool
            if %66 {
                %67 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca rec_tiny, "coerce", align 4
    %1 = alloca rec_tiny, "coerce", align 4
    %2 = alloca rec_tiny, "coerce", align 4
    %3 = alloca s32i, "__retval", align 4
    %4 = alloca rec_tiny[3], "x", align 2
    %5 = const 0 : s32i
    store %5, %3
    %6 = const 10 : s16i
    %7 = const 0 : s64i
    %8 = get_element %4[%7] : rec_tiny*
    %9 = get_member %8[0] "c" : s16i*
    store %6, %9, align 2
    %10 = const 11 : s16i
    %11 = const 1 : s64i
    %12 = get_element %4[%11] : rec_tiny*
    %13 = get_member %12[0] "c" : s16i*
    store %10, %13, align 2
    %14 = const 12 : s16i
    %15 = const 2 : s64i
    %16 = get_element %4[%15] : rec_tiny*
    %17 = get_member %16[0] "c" : s16i*
    store %14, %17, align 2
    %18 = const 20 : s16i
    %19 = const 0 : s64i
    %20 = get_element %4[%19] : rec_tiny*
    %21 = get_member %20[1] "d" : s16i*
    store %18, %21, align 2
    %22 = const 21 : s16i
    %23 = const 1 : s64i
    %24 = get_element %4[%23] : rec_tiny*
    %25 = get_member %24[1] "d" : s16i*
    store %22, %25, align 2
    %26 = const 22 : s16i
    %27 = const 2 : s64i
    %28 = get_element %4[%27] : rec_tiny*
    %29 = get_member %28[1] "d" : s16i*
    store %26, %29, align 2
    %30 = const 3 : s32i
    %31 = const 0 : s64i
    %32 = get_element %4[%31] : rec_tiny*
    %33 = const 1 : s64i
    %34 = get_element %4[%33] : rec_tiny*
    %35 = const 2 : s64i
    %36 = get_element %4[%35] : rec_tiny*
    %37 = const 123 : s64i
    %38 = load %32 : rec_tiny, align 2
    %39 = load %34 : rec_tiny, align 2
    %40 = load %36 : rec_tiny, align 2
    store %38, %2
    %41 = cast(bitcast) %2 : u32i*
    %42 = load %41 : u32i
    store %39, %1
    %43 = cast(bitcast) %1 : u32i*
    %44 = load %43 : u32i
    store %40, %0
    %45 = cast(bitcast) %0 : u32i*
    %46 = load %45 : u32i
    call @f(%30, %42, %44, %46, %37) [all]
    %47 = get_global @exit : ((s32i) -> void)*
    %48 = const 0 : s32i
    call @exit(%48) [all]
    %49 = load %3 : s32i
    return %49
}
