tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__931004_6.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/931004-6.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg0: s32i, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %50 = alloca s32i, "n", align 4
        %51 = alloca rec_tiny, "x", align 2
        %52 = alloca s32i, "i", align 4
        %53 = alloca rec___va_list_tag[1], "ap", align 16
        store %arg0, %50
        %54 = cast(array_to_ptrdecay) %53 : rec___va_list_tag*
        <unmodeled: cir.va_start>
        scope {
            %63 = const 0 : s32i
            store %63, %52, align 4
            for cond: {
                %85 = load %52 : s32i, align 4
                %86 = load %50 : s32i, align 4
                %87 = cmp lt %85, %86 : bool
                condition %87
            } step: {
                %64 = load %52 : s32i, align 4
                %65 = inc %64 : s32i [nsw]
                store %65, %52, align 4
                yield
            } do {
                scope {
                    %66 = alloca rec_tiny, "vaarg.tmp", align 2
                    %67 = cast(array_to_ptrdecay) %53 : rec___va_list_tag*
                    <unmodeled: cir.va_arg>
                    store %68, %66, align 2
                    copy %51, %66
                    scope {
                        %77 = get_member %51[0] "c" : s16i*
                        %78 = load %77 : s16i, align 2
                        %79 = cast(integral) %78 : s32i
                        %80 = load %52 : s32i, align 4
                        %81 = const 10 : s32i
                        %82 = add %80, %81 : s32i [nsw]
                        %83 = cmp ne %79, %82 : bool
                        if %83 {
                            %84 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    scope {
                        %69 = get_member %51[1] "d" : s16i*
                        %70 = load %69 : s16i, align 2
                        %71 = cast(integral) %70 : s32i
                        %72 = load %52 : s32i, align 4
                        %73 = const 20 : s32i
                        %74 = add %72, %73 : s32i [nsw]
                        %75 = cmp ne %71, %74 : bool
                        if %75 {
                            %76 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        scope {
            %56 = alloca s64i, "x", align 8
            %57 = cast(array_to_ptrdecay) %53 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            store %58, %56, align 8
            scope {
                %59 = load %56 : s64i, align 8
                %60 = const 123 : s64i
                %61 = cmp ne %59, %60 : bool
                if %61 {
                    %62 = get_global @abort : (() -> void)*
                    call @abort() [all]
                    yield
                }
                yield
            }
            yield
        }
        %55 = cast(array_to_ptrdecay) %53 : rec___va_list_tag*
        <unmodeled: cir.va_end>
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca rec_tiny, "coerce", align 4
    %1 = alloca rec_tiny, "coerce", align 4
    %2 = alloca rec_tiny, "coerce", align 4
    %3 = alloca s32i, "__retval", align 4
    %4 = alloca rec_tiny[3], "x", align 2
    %5 = const 0 : s32i
    store %5, %3
    %6 = const 10 : s16i
    %7 = const 0 : s64i
    %8 = get_element %4[%7] : rec_tiny*
    %9 = get_member %8[0] "c" : s16i*
    store %6, %9, align 2
    %10 = const 11 : s16i
    %11 = const 1 : s64i
    %12 = get_element %4[%11] : rec_tiny*
    %13 = get_member %12[0] "c" : s16i*
    store %10, %13, align 2
    %14 = const 12 : s16i
    %15 = const 2 : s64i
    %16 = get_element %4[%15] : rec_tiny*
    %17 = get_member %16[0] "c" : s16i*
    store %14, %17, align 2
    %18 = const 20 : s16i
    %19 = const 0 : s64i
    %20 = get_element %4[%19] : rec_tiny*
    %21 = get_member %20[1] "d" : s16i*
    store %18, %21, align 2
    %22 = const 21 : s16i
    %23 = const 1 : s64i
    %24 = get_element %4[%23] : rec_tiny*
    %25 = get_member %24[1] "d" : s16i*
    store %22, %25, align 2
    %26 = const 22 : s16i
    %27 = const 2 : s64i
    %28 = get_element %4[%27] : rec_tiny*
    %29 = get_member %28[1] "d" : s16i*
    store %26, %29, align 2
    %30 = const 3 : s32i
    %31 = const 0 : s64i
    %32 = get_element %4[%31] : rec_tiny*
    %33 = const 1 : s64i
    %34 = get_element %4[%33] : rec_tiny*
    %35 = const 2 : s64i
    %36 = get_element %4[%35] : rec_tiny*
    %37 = const 123 : s64i
    %38 = load %32 : rec_tiny, align 2
    %39 = load %34 : rec_tiny, align 2
    %40 = load %36 : rec_tiny, align 2
    store %38, %2
    %41 = cast(bitcast) %2 : u32i*
    %42 = load %41 : u32i
    store %39, %1
    %43 = cast(bitcast) %1 : u32i*
    %44 = load %43 : u32i
    store %40, %0
    %45 = cast(bitcast) %0 : u32i*
    %46 = load %45 : u32i
    call @f(%30, %42, %44, %46, %37) [all]
    %47 = get_global @exit : ((s32i) -> void)*
    %48 = const 0 : s32i
    call @exit(%48) [all]
    %49 = load %3 : s32i
    return %49
}
